--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "mongoose": "^4.13.5",
+    "nodemon": "*",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
