--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "materialize-css": "^0.100.2",
     "mongodb": "^2.2.30",
     "mongoose": "^4.13.5",
     "nodemon": "*",
@@ -37,9 +38,11 @@
     "react-dom": "^15.6.1",
     "react-redux": "^4.4.8",
     "react-router": "^3.2.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
     "webpack": "^3.1.0"
   }
