--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "jwt-decode": "^2.2.0",
     "materialize-css": "^0.100.2",
     "mongodb": "^2.2.30",
     "mongoose": "^4.13.5",
@@ -33,14 +34,15 @@
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
     "path": "^0.12.7",
+    "prop-types": "^15.6.1",
     "pug": "^2.0.0-rc.2",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-dom": "^15.6.1",
     "react-redux": "^4.4.8",
-    "react-router": "^3.2.0",
+    "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.7.1",
+    "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.5.2",
