--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.4",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "jwt-decode": "^2.2.0",
+    "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
     "mongodb": "^2.2.30",
     "mongoose": "^4.13.5",
+    "mui": "0.0.1",
+    "muicss": "^0.9.39-rc1",
     "nodemon": "*",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
@@ -36,8 +40,11 @@
     "path": "^0.12.7",
     "prop-types": "^15.6.1",
     "pug": "^2.0.0-rc.2",
+    "python-shell": "^0.5.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.1",
+    "react-popup": "^0.9.2",
+    "react-radio-buttons": "^1.2.2",
     "react-redux": "^4.4.8",
     "react-router": "^3.2.1",
     "react-router-dom": "^4.2.2",
@@ -45,6 +52,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.79.1",
     "superagent": "^3.5.2",
     "webpack": "^3.1.0"
   }
