--- a/requirements.txt
+++ b/requirements.txt
@@ -1,227 +1,4 @@
-alabaster
-anaconda
-anaconda-client
-anaconda-navigator
-anaconda-project        
-asn1crypto              
-astroid                 
-astropy                 
-autopep8                
-babel                   
-backports               
-backports.shutil_get_terminal_size 1.0.0
-beautifulsoup4          
-bitarray                
-bkcharts                
-blaze                   
-bleach                  
-bokeh                   
-boto                    
-bottle                  
-bottleneck              
-bs4                     
-bzip2                   
-ca-certificates         
-cachecontrol            
-certifi                 
-cffi                    
-chardet                 
-click                   
-cloudpickle             
-clyent                  
-colorama                
-comtypes                
-conda                   
-conda-build             
-conda-env               
-conda-verify            
-console_shortcut        
-contextlib2             
-cryptography            
-curl                    
-cycler                  
-cython                  
-cytoolz                 
-dask                    
-dask-core               
-datashape               
-decorator               
-distlib                 
-distributed             
-docutils                
-entrypoints             
-et_xmlfile              
-fastcache               
-filelock                
-flask                   
-flask-cors              
-freetype                
-get_terminal_size       
-gevent                  
-glob2                   
-graphviz                
-graphviz                
-greenlet                
-h5py                    
-hdf5                    
-heapdict                
-html5lib                
-icc_rt                  
-icu                     
-idna                    
-imageio                 
-imagesize               
-intel-openmp            
-ipykernel               
-ipython                 
-ipython_genutils        
-ipywidgets              
-isort                   
-itsdangerous            
-jdcal                   
-jedi                    
-jinja2                  
-joblib                  
-jpeg                    
-jsonschema              
-jupyter                 
-jupyter_client          
-jupyter_console         
-jupyter_core            
-jupyterlab              
-jupyterlab_launcher     
-lazy-object-proxy       
-libiconv                
-libpng                  
-libssh2                 
-libtiff                 
-libxml2                 
-libxslt                 
-llvmlite                
-locket                  
-lockfile                
-lxml                    
-lzo                     
-markupsafe              
-matplotlib              
-mccabe                  
-menuinst                
-mistune                 
-mkl                     
-mkl-service             
-mpmath                  
-msgpack-python          
-multipledispatch        
-navigator-updater       
-nbconvert               
-nbformat                
-networkx                
-nltk                    
-nose                    
-notebook                
-numba                   
-numexpr                 
-numpy                   
-numpydoc                
-odo                     
-olefile                 
-openpyxl                
-openssl                 
-packaging               
-pandas                  
-pandoc                  
-pandocfilters           
-partd                   
-path.py                 
-pathlib2                
-patsy                   
-pep8                    
-pickleshare             
-pillow                  
-pip                     
-pip                     
-pkginfo                 
-ply                     
-progress                
-prompt_toolkit          
-psutil                  
-py                      
-pycodestyle             
-pycosat                 
-pycparser               
-pycrypto                
-pycurl                  
-pyflakes                
-pygments                
-pylint                  
-pymining                
-pyodbc                  
-pyopenssl               
-pyparsing               
-pyqt                    
-pysocks                 
-pytables                
-pytest                  
-python                  
-python-dateutil         
-python-graphviz         
-pytz                    
-pywavelets              
-pywin32                 
-pyyaml                  
-pyzmq                   
-qt                      
-qtawesome               
-qtconsole               
-qtpy                    
-requests                
-rope                    
-ruamel_yaml             
-scikit-image            
-scikit-learn            
-scipy                   
-seaborn                 
-selenium                
-setuptools              
-simplegeneric           
-singledispatch          
-sip                     
-six                     
-snowballstemmer         
-sortedcollections       
-sortedcontainers        
-sphinx                  
-sphinxcontrib           
-sphinxcontrib-websupport
-spyder                  
-sqlalchemy              
-sqlite                  
-statsmodels             
-sympy                   
-tblib                   
-testpath                
-tk                      
-toolz                   
-tornado                 
-traitlets               
-typing                  
-unicodecsv              
-urllib3                 
-vc                      
-vs2015_runtime          
-wcwidth                 
-webencodings            
-werkzeug                
-wheel                   
-widgetsnbextension      
-win_inet_pton           
-win_unicode_console     
-wincertstore            
-wrapt                   
-xlrd                    
-xlsxwriter              
-xlwings                 
-xlwt                    
-yaml                    
-zict                    
-zlib 
+selenium==3.11.0
+requests==2.18.4
+jsonschema==2.6.0
+beautifulsoup4==4.6.0
